examples/errors/divide_by_zero1.al
main :: proc () {
	a := 39 / 0
}
